src/snapshots/pbsql__tests__create_table_disallow_compound_identifier.snap
---
source: src/lib.rs
expression: report
---
database_names: ~
translated_query:
  Err: "Expected 1 identifiers for the table name, got: [\"x\", \"y\"]"
original_query:
  - CREATE TABLE IF NOT EXISTS x.y (
  - "    \"excluded\" BOOLEAN NOT NULL DEFAULT FALSE,"
  - "    \"externalLink\" TEXT NOT NULL,"
  - "    \"externalLinkTitle\" TEXT NOT NULL,"
  - "    \"id\" TEXT PRIMARY KEY NOT NULL,"
  - "    \"imageUrl\" TEXT NOT NULL,"
  - "    \"subtitle\" TEXT NULL,"
  - "    \"title\" TEXT NOT NULL"
  - )
