src/snapshots/pbsql__tests__create_table_multiple.snap
---
source: src/lib.rs
expression: report
---
database_names:
  ~/books/things: main
  ~/books/thongs: db1
translated_query:
  Ok:
    - - CREATE TABLE IF NOT EXISTS main.table_contents (
      - "  \"excluded\" BOOLEAN NOT NULL DEFAULT false,"
      - "  \"externalLink\" TEXT NOT NULL,"
      - "  \"externalLinkTitle\" TEXT NOT NULL,"
      - "  \"id\" TEXT PRIMARY KEY NOT NULL,"
      - "  \"imageUrl\" TEXT NOT NULL,"
      - "  \"subtitle\" TEXT NULL,"
      - "  \"title\" TEXT NOT NULL"
      - )
    - - "CREATE TABLE IF NOT EXISTS db1.table_contents (\"title\" TEXT NOT NULL)"
original_query:
  - "CREATE TABLE IF NOT EXISTS \"~/books/things\" ("
  - "    \"excluded\" BOOLEAN NOT NULL DEFAULT FALSE,"
  - "    \"externalLink\" TEXT NOT NULL,"
  - "    \"externalLinkTitle\" TEXT NOT NULL,"
  - "    \"id\" TEXT PRIMARY KEY NOT NULL,"
  - "    \"imageUrl\" TEXT NOT NULL,"
  - "    \"subtitle\" TEXT NULL,"
  - "    \"title\" TEXT NOT NULL"
  - );
  - "CREATE TABLE IF NOT EXISTS \"~/books/thongs\" ("
  - "    \"title\" TEXT NOT NULL"
  - );
