src/snapshots/pbsql__tests__select_null.snap
---
source: src/lib.rs
expression: report
---
database_names: {}
translated_query:
  Ok:
    - - SELECT
      - "  NULL"
original_query:
  - SELECT null
