src/snapshots/pbsql__tests__unsupported_function.snap
---
source: src/lib.rs
expression: report
---
database_names: ~
translated_query:
  Err: "Unsupported function: badfunc"
original_query:
  - SELECT badfunc()
